Add adding beer to tasting room
